# Twitch-Channel-Points-Miner-v2

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  FAQ.md  FEEDBACK_AUDIT.md  FORK_FEATURES.md  README.md  example.py  pyproject.toml  requirements.txt
.claude/: settings.json
.superpowers/brainstorm/1182-1779247474/content/: editor-layout.html  scene-switcher-approach.html  scope-overview.html  templates.html  widget-types.html
.superpowers/brainstorm/1182-1779247474/state/: events  server-stopped
.superpowers/brainstorm/1905-1778882736/content/: full-preview.html  history-layout.html  layout-options.html
.superpowers/brainstorm/1905-1778882736/state/: server-stopped
TwitchChannelPointsMiner/: TwitchChannelPointsMiner.py  WatchStreakCache.py  __init__.py  constants.py  utils.py  watch_streak_cache.py
TwitchChannelPointsMiner/classes/: AnalyticsServer.py  Chat.py  PubSub.py  Settings.py  Twitch.py  TwitchWebSocket.py  Webhook.py
TwitchChannelPointsMiner/classes/entities/: Bet.py  Campaign.py  Drop.py  PubsubTopic.py  Stream.py  Streamer.py
TwitchChannelPointsMiner/classes/websocket/: Pool.py  __init__.py
assets/: charts.html  dark-theme.css  script.js  style.css
egg-twitch-channel-points-miner/: egg-twitch-channel-points-miner-python-auto--install.yaml
tests/: test_chat_subscription_notifications.py  test_followers_with_dates.py  test_hermes_transport.py  test_make_predictions.py  test_priority_favorite.py  test_priority_selection.py  test_priority_sorting.py  test_request_retries.py  test_streamers_export.py  test_watch_streak_cache.py  test_watch_streak_fallback.py  test_watch_streak_milestones.py  test_websocket_badtopic.py
(+21 files in other folders)
